--- a/MovieDb/Views/Filmes/Categoria.cshtml
+++ b/MovieDb/Views/Filmes/Categoria.cshtml
@@ -1,14 +1,12 @@
 ﻿@model IEnumerable<MovieDb.Models.Filme>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Categoria";
 }
 
-<h1>Filmes</h1>
+<h1>@ViewBag.Categoria.Nome</h1>
 
-<p>
-    <a asp-action="Create" class="btn btn-primary">Criar Novo</a>
-</p>
+
 <table class="table">
     <thead>
         <tr>
@@ -19,15 +17,11 @@
                 @Html.DisplayNameFor(model => model.Duracao)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Favorito)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.DataLancamento)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Categoria)
+                @Html.DisplayNameFor(model => model.Favorito)
             </th>
-            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -40,18 +34,10 @@
                 @Html.DisplayFor(modelItem => item.Duracao)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Favorito)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.DataLancamento)
             </td>
             <td>
-                <a asp-controller="Filmes" asp-action="Categoria" asp-route-id="@item.Categoria.Id">@item.Categoria.Nome</a>
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning">Editar</a> |
-                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-info">Detalhes</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Deletar</a>
+                @Html.DisplayFor(modelItem => item.Favorito)
             </td>
         </tr>
 }
