--- a/MovieDb/Views/Categorias/Index.cshtml
+++ b/MovieDb/Views/Categorias/Index.cshtml
@@ -15,6 +15,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Nome)
             </th>
+            <th>
+                # Filmes
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -22,7 +25,10 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Nome)
+                <a asp-action="Filmes" asp-route-id="@item.Id">@item.Nome</a>
+            </td>
+            <td>
+                @item.Qtd
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning">Editar</a> |
