--- a/MovieDb/Views/Filmes/Details.cshtml
+++ b/MovieDb/Views/Filmes/Details.cshtml
@@ -23,6 +23,12 @@
             @Html.DisplayFor(model => model.Duracao)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Favorito)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Favorito)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.DataLancamento)
         </dt>
         <dd class = "col-sm-10">
@@ -38,5 +44,5 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar para Listagem</a>
 </div>
