--- a/MovieDb/Views/Home/Index.cshtml
+++ b/MovieDb/Views/Home/Index.cshtml
@@ -2,7 +2,68 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+    </ol>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img class="d-block w-100" src="https://www.themoviedb.org/t/p/original/p2vgoQXLEUfTdpLn2Ob7L7sHZkT.jpg" alt="First slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="https://www.themoviedb.org/t/p/original/ddIkmH3TpR6XSc47jj0BrGK5Rbz.jpg" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="https://www.themoviedb.org/t/p/original/dA7nf1oYlutAcvlwQe0Lw7B6HnV.jpg" alt="Third slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="https://www.themoviedb.org/t/p/original/a3dmI6TtJ00zgOIPVgaJrouVFg8.jpg" alt="Fourth slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="https://www.themoviedb.org/t/p/original/ii8QGacT3MXESqBckQlyrATY0lT.jpg" alt="Fifth slide">
+        </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
 </div>
+
+<br />
+
+<div class="container">
+    <div class="row">
+        <div class="col-5">
+            <div class="card" style="width:400px">
+                <img class="card-img-top" src="https://laughingsquid.com/wp-content/uploads/2016/03/Luke_print_promoHR_1024x1024.jpg" alt="Card image">
+                <div class="card-body">
+                    <h4 class="card-title">Lucas Lemos Pinheiro</h4>
+                    <p>Estagiário - Sistemas de Informação</p>
+                    <a href="https://github.com/Juststorm" target="_blank" class="btn btn-primary">Ver Perfil</a>
+                </div>
+            </div>
+        </div>
+        <div class="col" style="padding-top: 15px">
+            <p style="text-align: justify">
+                Mussum Ipsum, cacilds vidis litro abertis. Leite de capivaris, leite de mula manquis sem cabeça. Mauris nec dolor in eros commodo tempor. Aenean aliquam molestie leo, vitae iaculis nisl. Casamentiss faiz malandris se pirulitá. Quem manda na minha terra sou euzis!<br /><br />
+
+                Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e fermentis. Diuretics paradis num copo é motivis de denguis. Cevadis im ampola pa arma uma pindureta. Quem num gosta di mim que vai caçá sua turmis!<br /><br />
+
+                Quem num gosta di mé, boa gentis num é. Atirei o pau no gatis, per gatis num morreus. Mais vale um bebadis conhecidiss, que um alcoolatra anonimis. Não sou faixa preta cumpadi, sou preto inteiris, inteiris.<br /><br />
+
+                A ordem dos tratores não altera o pão duris. Si u mundo tá muito paradis? Toma um mé que o mundo vai girarzis! Sapien in monti palavris qui num significa nadis i pareci latim. Si num tem leite então bota uma pinga aí cumpadi!<br />
+            </p>
+        </div>
+    </div>
+</div>
+
+
+
